# fictional-garbanzo

./: .env  CONTRIBUTING.md  Cargo.toml  README.md  compose.yml
.github/workflows/: main.yml
migrations/: 20230127002345_book.sql
server/: .env  Cargo.toml
server/migrations/: 20230127002345_book.sql
server/src/: main.rs
src/: main.rs
src/author/: endpoints.rs  handlers.rs  mod.rs  models.rs  queries.rs
src/book/: handlers.rs  mod.rs  models.rs  queries.rs
