[package]
name = "fictional-garbanzo-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
actix-web = "4"
sqlx = { version = "0.7.3", features = [
  "tls-rustls",
  "postgres",
  "runtime-async-std",
] }
serde = { version = "1.0", features = ["derive"] }
